pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: echo
spec:
  containers:
  - name: echo
    image: registry.cluster.wik.cloud/public/echo
    resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
    ports:
    - containerPort: 8080
