service.yml
apiVersion: v1
kind: Service
metadata:
  name: echo-service
spec:
  selector:
    app: echo-replicaset
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
